feat: add correlation ID, improve logging, and fix Swagger schema issues